--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip install --user -r requirements.txt",
-	"updateContentCommand": "pip install -r requirements.txt && python manage.py migrate",
+	"updateContentCommand": "source .env && pip install -r requirements.txt && python manage.py migrate",
 	"postCreateCommand": "cp .env.example .env",
 	"postAttachCommand": {
 	  "server": "python manage.py runserver"
