--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,29 +1,20 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/postgres
 {
-	"name": "Django",
-	"image": "mcr.microsoft.com/devcontainers/universal:2",
+	"build": {
+		// Path is relative to the devcontainer.json file.
+		"dockerfile": "Dockerfile"
+	},
+	"dockerComposeFile": "docker-compose.yml",
+    "service": "devcontainer",
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	"hostRequirements": {
 	  "cpus": 4
 	},
 	"waitFor": "onCreateCommand",
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	"features": {
-	  "ghcr.io/devcontainers-contrib/features/coverage-py:2": {}
-	},
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip install --user -r requirements.txt",
-	"updateContentCommand": "source .env && pip install -r requirements.txt && python manage.py migrate",
+	"updateContentCommand": "pip install -r requirements.txt && python manage.py migrate",
 	"postCreateCommand": "cp .env.example .env",
 	"postAttachCommand": {
 	  "server": "python manage.py runserver"
 	},
-
-	// Configure tool-specific properties.
-	// "customizations": {},
 	"customizations": {
 	  "codespaces": {
 		"openFiles": [
@@ -32,23 +23,23 @@
 	  },
 	  "vscode": {
 		"extensions": [
-		  "ms-python.python"
+		  "ms-python.python",
+		  "ms-azuretools.vscode-docker"
 		]
 	  }
 	},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// This can be used to network with other containers or the host.
-	// "forwardPorts": [5000, 5432],
 	"portsAttributes": {
 	  "8000": {
 		"label": "Application",
 		"onAutoForward": "openPreview"
 	  }
 	},
-	"forwardPorts": [8000]
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
-  }
-  
+	"forwardPorts": [
+		8000,	// Django App
+		5432, 	// PostgreSQL Database
+		5691, 	// RisingWave Dashboard
+		3001, 	// Grafana 
+		9400, 	// Meta Store: MinIO
+		9500 	// Prometheus
+	]
+}
