--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,28 +1,6 @@
-version: '3.8'
+x-image: &image
+  image: ${RW_IMAGE:-risingwavelabs/risingwave:v1.6.1}
 services:
-  devcontainer:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ../..:/workspaces:cached
-    network_mode: service:db
-    command: sleep infinity
-
-  db:
-    image: postgres:latest
-    restart: unless-stopped
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    env_file:
-      - ../.env
-    environment:
-      POSTGRES_HOST: ${PGHOST}
-      POSTGRES_PORT: ${PGPORT}
-      POSTGRES_USER: ${PGUSER}
-      POSTGRES_PASSWORD: ${PGPASSWORD}
-      POSTGRES_DB: ${PGDATABASE}
-
   risingwave-standalone:
     <<: *image
     command: "standalone --meta-opts=\" \
@@ -309,4 +287,3 @@ volumes:
     external: false
   clickhouse:
     external: false
-  postgres-data:
